Adição de mensagens

--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -21,6 +21,9 @@ birthday=Birthday
 new.account=New account
 recover=Recover
 reset=Reset
+users=Users
+roles=Roles
+permissions=Permissions
 
 question.dont.have.account=Don't have a account yet?
 question.forgot.password=Did you forgot your password?
