--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -21,6 +21,9 @@ birthday=Data de nascimento
 new.account=Nova conta
 recover=Recuperar
 reset=Redefinir
+users=Usu\u00e1rios
+roles=Grupos
+permissions=Permiss\u00f5es
 
 question.dont.have.account=Ainda n\u00e3o tem uma conta?
 question.forgot.password=Esqueceu a sua senha?
