Criação das Permissões. Implementação da parte de Authorization do Shiro. Início do caso de uso de Administração.

--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -25,6 +25,9 @@ users=Users
 roles=Roles
 permissions=Permissions
 
+info.drop.permission.here=Drag&Drop permissions here, after selecting a Role
+info.first.select.role=First select a Role
+
 question.dont.have.account=Don't have a account yet?
 question.forgot.password=Did you forgot your password?
 
@@ -40,11 +43,15 @@ action.error.linkage.exception=Corrupted linkage. Do not try to confirm account 
 action.error.invalid.informations=Invalid informations
 action.error.invalid.user.temp.window.token=Invalid operation. The time has expired, the link was already consumed or this operation was executed abnormally, without a link. If necessary, please, ask again for password reset.
 action.error.forbiden.operation=Forbiden Illegal Operation. Contacting Authorities...
+action.error.already.exists=Already exists!
+action.error.undeletable=System's assets cannot be deleted.
 
 action.message.confirmation.completed=Successfully account confirmation. You can now use it normally.
 action.message.account.created=Your new account has been created successfully.<br/><br/>But before the first login, you need to confirm the email informed by clicking the link we sent to your email box.
 action.message.password.reset=Password reset successfully
 action.message.reset.password.email.sent=We sent a message to your email inbox with a link to be used in the next 7 minutes and only. After this the link will be invalidated. If necessary ask a new one. Please, head to your email box as soon as possible to continue the procedures.
+action.message.successfully.saved=Successfully saved
+action.message.successfully.deleted=Successfully deleted
 
 exception.email.confirmation.sending=We apologize. The account was created, but we were not able to send the confirmation email. The administrator has been already warned. We'll send it as soon as the service goes up again. Please, check your mail box later.
 exception.login.container=There was a internal error while registering session on server.
