--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -25,6 +25,9 @@ users=Usu\u00e1rios
 roles=Grupos
 permissions=Permiss\u00f5es
 
+info.drop.permission.here=Arraste & Solte permiss\u00f5es aqui, ap\u00f3s selecionar um Grupo
+info.first.select.role=Primeiro selecione um Grupo
+
 question.dont.have.account=Ainda n\u00e3o tem uma conta?
 question.forgot.password=Esqueceu a sua senha?
 
@@ -40,11 +43,15 @@ action.error.linkage.exception=Linkagem corrompida. N\u00e3o tente confirmar a c
 action.error.invalid.informations=Informa\u00e7\u00f5es inv\u00e1lidas
 action.error.invalid.user.temp.window.token=Opera\u00e7\u00e3o inv\u00e1lida. O tempo expirou, o link j\u00e1 foi consumido ou esta opera\u00e7\u00e3o foi executada anormalmente, sem um link. Se necess\u00e1rio, por favor, solicite novamente a redefini\u00e7\u00e3o de senha.
 action.error.forbiden.operation=Opera\u00e7\u00e3o Proibida e Ilegal. Contactando Autoridades...
+action.error.already.exists=J\u00e1 existe!
+action.error.undeletable=Itens do sistema n\u00e3o podem ser deletados.
 
 action.message.confirmation.completed=Confirma\u00e7\u00e3o de conta bem sucedida. Voc\u00ea j\u00e1 pode us\u00e1-la normalmente.
 action.message.account.created=Sua nova conta foi criada com sucesso.<br/><br/>Por\u00e9m antes do primeiro login, voc\u00ea precisa confirmar o email informado clicando no link que enviamos para sua caixa de email.
 action.message.password.reset=Senha redefinida com sucesso
 action.message.reset.password.email.sent=Enviamos uma mensagem para sua caixa de email com um link para ser usado nos pr\u00f3ximos 7 minutos apenas. Ap\u00f3s esse prazo o link ser\u00e1 invalidado. Se necess\u00e1rio solicite novamente. Por favor, siga para a sua caixa de email o quanto antes para continuarmos os procedimentos.
+action.message.successfully.saved=Salvo(a) com sucesso
+action.message.successfully.deleted=Exclu\u00eddo(a) com sucesso
 
 exception.email.confirmation.sending=Desculpe-nos, a conta foi criada, mas n\u00e3o foi poss\u00edvel enviar o e-mail para confirma\u00e7\u00e3o da nova conta. O administrador j\u00e1 foi avisado. Enviaremos t\u00e3o logo restabele\u00e7amos o servi\u00e7o. Por favor, verifique sua caixa de e-mail mais tarde.
 exception.login.container=Ocorreu um erro interno ao registrar sess\u00e3o no servidor.
