Adição de consulta de permissões por role. Conclusão dos casos de uso Adicionar/Remover Role e Adicionar/Remover Permissões. Conclusão do frontend para Associar Roles&Permissões. Melhorias no javascript.

--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -25,8 +25,10 @@ users=Users
 roles=Roles
 permissions=Permissions
 
-info.drop.permission.here=Drag&Drop permissions here, after selecting a Role
+info.drop.permission.here=Drag&Drop permissions here to associate it with a Role, after selecting a Role. You can drop a Role to select it.
 info.first.select.role=First select a Role
+info.role.selected=Setting permissions for role {0}
+info.role.without.permissions=This role does not have any associated permission.
 
 question.dont.have.account=Don't have a account yet?
 question.forgot.password=Did you forgot your password?
