--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -25,8 +25,10 @@ users=Usu\u00e1rios
 roles=Grupos
 permissions=Permiss\u00f5es
 
-info.drop.permission.here=Arraste & Solte permiss\u00f5es aqui, ap\u00f3s selecionar um Grupo
+info.drop.permission.here=Arraste & Solte permiss\u00f5es aqui para associ\u00e1-la a um Grupo, ap\u00f3s selecionar um Grupo. Voc\u00ea pode arrastar um Grupo para selecion\u00e1-lo.
 info.first.select.role=Primeiro selecione um Grupo
+info.role.selected=Configurando permiss\u00f5es para o grupo {0}
+info.role.without.permissions=Este grupo n\u00e3o tem nenhuma permiss\u00e3o associada.
 
 question.dont.have.account=Ainda n\u00e3o tem uma conta?
 question.forgot.password=Esqueceu a sua senha?
