Associação de Roles e Permissões

--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -24,8 +24,12 @@ reset=Reset
 users=Users
 roles=Roles
 permissions=Permissions
+system.administration=System's Administration
+logout=Logout
+save=Save
 
 info.drop.permission.here=Drag&Drop permissions here to associate it with a Role, after selecting a Role. You can drop a Role to select it.
+info.select.role=Select a Role
 info.first.select.role=First select a Role
 info.role.selected=Setting permissions for role {0}
 info.role.without.permissions=This role does not have any associated permission.
