--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -24,8 +24,12 @@ reset=Redefinir
 users=Usu\u00e1rios
 roles=Grupos
 permissions=Permiss\u00f5es
+system.administration=Administra\u00e7\u00e3o do Sistema
+logout=Logout
+save=Salvar
 
 info.drop.permission.here=Arraste & Solte permiss\u00f5es aqui para associ\u00e1-la a um Grupo, ap\u00f3s selecionar um Grupo. Voc\u00ea pode arrastar um Grupo para selecion\u00e1-lo.
+info.select.role=Selecione um Grupo
 info.first.select.role=Primeiro selecione um Grupo
 info.role.selected=Configurando permiss\u00f5es para o grupo {0}
 info.role.without.permissions=Este grupo n\u00e3o tem nenhuma permiss\u00e3o associada.
