Conslusão da Associação de Roles e Permissões

--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -33,6 +33,7 @@ info.select.role=Select a Role
 info.first.select.role=First select a Role
 info.role.selected=Setting permissions for role {0}
 info.role.without.permissions=This role does not have any associated permission.
+info.trash.can.hint=Drag&Drop a item here to delete it
 
 question.dont.have.account=Don't have a account yet?
 question.forgot.password=Did you forgot your password?
