--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -33,6 +33,7 @@ info.select.role=Selecione um Grupo
 info.first.select.role=Primeiro selecione um Grupo
 info.role.selected=Configurando permiss\u00f5es para o grupo {0}
 info.role.without.permissions=Este grupo n\u00e3o tem nenhuma permiss\u00e3o associada.
+info.trash.can.hint=Arraste&Solte um item aqui para delet\u00e1-lo
 
 question.dont.have.account=Ainda n\u00e3o tem uma conta?
 question.forgot.password=Esqueceu a sua senha?
