--- a/frontend-struts/src/main/resources/global_en.properties
+++ b/frontend-struts/src/main/resources/global_en.properties
@@ -28,6 +28,9 @@ system.administration=System's Administration
 logout=Logout
 save=Save
 
+roles.and.permissions=Roles & Permissions
+users.and.roles=Users & Roles
+
 info.drop.permission.here=Drag&Drop permissions here to associate it with a Role, after selecting a Role. You can drop a Role to select it.
 info.select.role=Select a Role
 info.first.select.role=First select a Role
