--- a/frontend-struts/src/main/resources/global_pt_BR.properties
+++ b/frontend-struts/src/main/resources/global_pt_BR.properties
@@ -28,6 +28,9 @@ system.administration=Administra\u00e7\u00e3o do Sistema
 logout=Logout
 save=Salvar
 
+roles.and.permissions=Grupos & Permiss\u00f5es
+users.and.roles=Usu\u00e1rios & Grupos
+
 info.drop.permission.here=Arraste & Solte permiss\u00f5es aqui para associ\u00e1-la a um Grupo, ap\u00f3s selecionar um Grupo. Voc\u00ea pode arrastar um Grupo para selecion\u00e1-lo.
 info.select.role=Selecione um Grupo
 info.first.select.role=Primeiro selecione um Grupo
